# pranag-AI

./: .env  COMPLETION_REPORT.md  FINAL_RESULTS.md  PINN_VS_SURROGATE_ANALYSIS.md  PIPELINE_STATUS.md  QUICK_START.md  README.md  debug_and_fix.py  debug_surrogate_data.py  evaluate_pinn_accuracy.py  get_stats.py  inference.py  output.txt  output2.txt  output3.txt  predictions_biology(1).csv  predictions_chemistry(1).csv  predictions_growth(1).csv  predictions_heat(1).csv  predictions_stress(1).csv  requirements.txt  run_complete_pipeline.py  universal_index.csv  validate_full_pipeline.py  validate_pipeline.py
Database-20260405T091335Z-3-001/Database/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Database-20260405T091335Z-3-001/Database/data/raw/materials_project/manifests/: 20260318T120034Z.jsonl  20260318T120034Z_summary.json  20260318T120136Z.jsonl  20260318T120136Z_summary.json  20260318T120220Z.jsonl  20260318T120220Z_summary.json  20260318T120250Z.jsonl  20260318T120250Z_summary.json  20260318T120326Z.jsonl  20260318T120326Z_summary.json  20260318T121053Z.jsonl  20260318T121053Z_summary.json  20260318T121201Z.jsonl  20260318T121201Z_summary.json  20260318T121214Z.jsonl  20260318T121214Z_summary.json  20260318T121231Z.jsonl  20260318T121231Z_summary.json  20260318T121254Z.jsonl  20260318T121254Z_summary.json  20260318T121829Z.jsonl  20260318T121829Z_summary.json  20260318T121856Z.jsonl  20260318T121856Z_summary.json  20260318T122119Z.jsonl  20260318T122119Z_summary.json
data/: dataset.parquet  dataset_v2_physics.parquet  materials.parquet  (+3 more)
(+48 files in other folders)
